--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -2,8 +2,10 @@
     display: grid;
     gap: 40px; 
     justify-content: center;
-    margin-left: -12% ;
+    margin-left: -10% ;
     margin-top:-4%;
+    padding-right:8%;
+    padding-bottom: 4%;
 }
 
 .cipher-cell {
